--- a/assets/images/User detail.html
+++ b/assets/images/User detail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0083)http://localhost:63342/f1_project/views/private/users/detail.php/?edit=1&?id?id=%203 -->
+<!-- saved from url=(0083)http://localhost:63342/f1_project/views/private/users/show_profile.php/?edit=1&?id?id=%203 -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>User detail</title>
 
@@ -174,13 +174,13 @@
             <div class="navbar-nav d-flex flex-column align-items-end gap-4 flex-lg-row justify-content-lg-end gap-lg-5">
                 <div class="d-flex flex-column align-items-end gap-4 flex-lg-row gap-lg-4 mt-4 mt-lg-0">
                     <div class="nav-item d-flex align-items-end">
-                        <a href="http://localhost:63342/f1_project/views/private/users/detail.php/?edit=1&amp;?id?id=%203#" class="my_outline_animation text-decoration-none hover-red d-flex align-items-end pb-2 gap-2">
+                        <a href="http://localhost:63342/f1_project/views/private/users/show_profile.php/?edit=1&amp;?id?id=%203#" class="my_outline_animation text-decoration-none hover-red d-flex align-items-end pb-2 gap-2">
                             <span class="material-symbols-outlined">shopping_bag</span>
                             <span>Store</span>
                         </a>
                     </div>
                     <div class="nav-item d-flex align-items-end">
-                        <a href="http://localhost:63342/f1_project/views/private/users/detail.php/?edit=1&amp;?id?id=%203#" class="my_outline_animation text-decoration-none hover-red d-flex align-items-end pb-2 gap-2">
+                        <a href="http://localhost:63342/f1_project/views/private/users/show_profile.php/?edit=1&amp;?id?id=%203#" class="my_outline_animation text-decoration-none hover-red d-flex align-items-end pb-2 gap-2">
                             <span class="material-symbols-outlined">sports_score</span>
                             <span>Circuits</span>
                         </a>
@@ -213,7 +213,7 @@
 </nav>
     <main class="container-fluid nav-profile">
         <div id="bg-profile" class="container d-flex justify-content-center">
-            <form id="profile-data" class="container-element" method="POST" action="http://localhost:63342/f1_project/controllers/users/edit.php/?my_profile=0">
+            <form id="profile-data" class="container-element" method="POST" action="http://localhost:63342/f1_project/controllers/users/update_profile.php/?my_profile=0">
                 <div class="d-flex justify-content-center">
                     <img id="photo_profile" class="rounded-circle" src="./User detail_files/default_img_profile.jpeg" alt="profile picture">
                 </div>
@@ -222,20 +222,20 @@
                     <div class="col-12 col-md-6">
                         <div class="col-12">
                             <span class="d-flex justify-content-center">
-                                <label for="edit_firstname" class="form-label"><strong class="text-red">Firstname</strong></label><br>
+                                <label for="firstname" class="form-label"><strong class="text-red">Firstname</strong></label><br>
                             </span>
                             <div class="input-group">
-                                <input type="text" name="edit_firstname" class="form-control tex-box" placeholder="&lt;">
+                                <input type="text" name="firstname" class="form-control tex-box" placeholder="&lt;">
                             </div>
                         </div>
                     </div>
                     <div class="col-12 col-md-6">
                         <div class="col-12">
                             <span class="d-flex justify-content-center">
-                                <label for="edit_lastname" class="form-label"><strong class="text-red">Lastname</strong></label><br>
+                                <label for="lastname" class="form-label"><strong class="text-red">Lastname</strong></label><br>
                             </span>
                             <div class="input-group d-flex text-center">
-                                <input type="text" name="edit_lastname" class="form-control tex-box" placeholder="">
+                                <input type="text" name="lastname" class="form-control tex-box" placeholder="">
                             </div>
                         </div>
                     </div>
